--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -7,13 +8,13 @@
     <meta name="keywords" content="web, site-web, accompagnement">
     <meta property="og:title" content="Net'BJ">
     <meta property="og:description" content="Net'Bj votre agence web">
-    <link rel="stylesheet" href="asset\style\style.css">
+    <link rel="stylesheet" href="asset/style/style.css">
 </head>
 
 <body>
     <nav>
         <div>
-            <a href=""><img src="asset\img\Net’BJ..png" alt="Logo Net'BJ"></a>
+            <a href=""><img src="asset/img/Net’BJ..png" alt="Logo Net'BJ"></a>
         </div>
         <ul>
             <li><a href="">Nous</a></li>
@@ -34,11 +35,14 @@
         </div>
         <div class="summary-box">
             <h1>Votre <span>nouvelle</span> agence <span>web</span></h1>
-            <p>Développez votre présence en ligne avec un site web professionnel conçu pour propulser votre entreprise vers de nouveaux sommets. </p>
-            <p>Notre équipe dynamique et expérimentée vous accompagne dans la réalisation de vos projets digitaux. À l'écoute, compréhensive, créative et réactive, nous vous proposons des solutions sur mesure, adaptées à vos besoins spécifiques.</p> 
+            <p>Développez votre présence en ligne avec un site web professionnel conçu pour propulser votre entreprise
+                vers de nouveaux sommets. </p>
+            <p>Notre équipe dynamique et expérimentée vous accompagne dans la réalisation de vos projets digitaux. À
+                l'écoute, compréhensive, créative et réactive, nous vous proposons des solutions sur mesure, adaptées à
+                vos besoins spécifiques.</p>
             <p>Contactez-nous dès maintenant pour bénéficier de nos services au plus vite !</p>
         </div>
-        
+
     </header>
 </body>
 
