--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Faites votres devis</p>
                 <p>ou</p>
                 <p>Rentrez en contact avec nous</p>
-            </div>
+            </div> 
             <button>Cliquez ici</button>
             <p>Devis gratuit</p>
         </div>
@@ -49,16 +49,16 @@
         <section id="we">
             <section class="weheader">
             <div class="wetitle-box">
-                <img src="asset\img\net.png" alt="">
+                <img src="asset/img/net.png" alt="">
                 <div>
                     <h1>Qui sommes <span> nous</span> ?</h1>
                 </div>
-                <img src="asset\img\net.png" alt="">
+                <img src="asset/img/net.png" alt="">
             </div>
             </section>
             <section class="wecontent">            
-                <img class="netwe" src="asset\img\netwe.png" alt="">
-                <img class="storm" src="asset\img\Storm.png" alt="">
+                <img class="netwe" src="asset/img/netwe.png" alt="">
+                <img class="storm" src="asset/img/Storm.png" alt="">
                 <div class="wecontenthight">
                     <div class="wemotivation-box">
                         <p>Nous sommes ouverts à toute proposition et nous savons nous <span>adapter rapidement</span> aux besoins changeants de nos clients. Notre <span>jeunesse</span> est notre force, nous permettant de penser de manière <span>créative</span> et de trouver des solutions <span>novatrices</span> pour répondre aux défis complexes du monde numérique d'aujourd'hui.</p>
@@ -67,7 +67,7 @@
                         <p>En tant qu'<span>étudiants</span> en école d'ingénieur, nous sommes constamment en train d'<span>apprendre</span> et de nous former pour rester à la pointe des dernières <span>technologies</span> et des meilleures <span>pratiques</span>. Notre <span>flexibilité et notre réactivité</span> nous permettent de nous adapter rapidement aux demandes de nos clients et de fournir des <span>solutions</span> sur mesure qui répondent à leurs besoins <span>spécifiques</span>.</p>
                     </div>
                 </div>
-                <img class="student" src="asset\img\student1.png" alt="">
+                <img class="student" src="asset/img/student1.png" alt="">
                 <div class="wecontentlower">
                     <p class="weyoung-box">Nous croyons en une culture d'équipe <span>collaborative</span>, où chaque membre apporte ses <span>idées</span> et ses <span>compétences</span> pour contribuer au <span>succès collectif</span>. Nous sommes dévoués à fournir un service client <span>exceptionnel</span>, en comprenant les besoins <span>uniques</span> de chaque client et en fournissant des solutions qui dépassent leurs <span>attentes</span>.</p>
                 </div>
@@ -76,7 +76,7 @@
     </main>
     <footer>
         <div>
-            <img src="asset\img\Net’BJ..png" alt="">
+            <img src="asset/img/Net’BJ..png" alt="">
             <p>Copyright © 2024 - Tous droits réservés</p>
         </div>
         <div>
