--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         </div>
         <ul>
             <li><a href="#we">Nous</a></li>
-            <li><a href="">Nos Projets</a></li>
+            <li><a href="#project">Nos Projets</a></li>
             <li><button>Contact</button></li>
         </ul>
     </nav>
     <header>
         <div class="home-devis-box">
             <h1>Envie de sauter le pas ?</h1>
+            <img class="devis" src="asset\img\devis.png" alt="">
             <div>
                 <p>Faites votres devis</p>
-                <p>ou</p>
                 <p>Rentrez en contact avec nous</p>
-            </div> 
+            </div>
+            <img class="confiance" src="asset\img\confiance.png" alt="">
             <button>Cliquez ici</button>
-            <p>Devis gratuit</p>
         </div>
         <div class="summary-box">
             <h1>Votre <span>nouvelle</span> agence <span>web</span></h1>
@@ -48,30 +48,60 @@
     <main>
         <section id="we">
             <section class="weheader">
-            <div class="wetitle-box">
-                <img src="asset/img/net.png" alt="">
-                <div>
-                    <h1>Qui sommes <span> nous</span> ?</h1>
+                <div class="wetitle-box">
+                    <img src="asset/img/net.png" alt="">
+                    <div>
+                        <h2>Qui sommes <span> nous</span> ?</h2>
+                    </div>
+                    <img src="asset/img/net.png" alt="">
                 </div>
-                <img src="asset/img/net.png" alt="">
-            </div>
             </section>
-            <section class="wecontent">            
+            <section class="wecontent">
                 <img class="netwe" src="asset/img/netwe.png" alt="">
                 <img class="storm" src="asset/img/Storm.png" alt="">
                 <div class="wecontenthight">
                     <div class="wemotivation-box">
-                        <p>Nous sommes ouverts à toute proposition et nous savons nous <span>adapter rapidement</span> aux besoins changeants de nos clients. Notre <span>jeunesse</span> est notre force, nous permettant de penser de manière <span>créative</span> et de trouver des solutions <span>novatrices</span> pour répondre aux défis complexes du monde numérique d'aujourd'hui.</p>
+                        <p>Nous sommes ouverts à toute proposition et nous savons nous <span>adapter rapidement</span>
+                            aux besoins changeants de nos clients. Notre <span>jeunesse</span> est notre force, nous
+                            permettant de penser de manière <span>créative</span> et de trouver des solutions
+                            <span>novatrices</span> pour répondre aux défis complexes du monde numérique d'aujourd'hui.
+                        </p>
                     </div>
                     <div class="westudent-box">
-                        <p>En tant qu'<span>étudiants</span> en école d'ingénieur, nous sommes constamment en train d'<span>apprendre</span> et de nous former pour rester à la pointe des dernières <span>technologies</span> et des meilleures <span>pratiques</span>. Notre <span>flexibilité et notre réactivité</span> nous permettent de nous adapter rapidement aux demandes de nos clients et de fournir des <span>solutions</span> sur mesure qui répondent à leurs besoins <span>spécifiques</span>.</p>
+                        <p>En tant qu'<span>étudiants</span> en école d'ingénieur, nous sommes constamment en train
+                            d'<span>apprendre</span> et de nous former pour rester à la pointe des dernières
+                            <span>technologies</span> et des meilleures <span>pratiques</span>. Notre <span>flexibilité
+                                et notre réactivité</span> nous permettent de nous adapter rapidement aux demandes de
+                            nos clients et de fournir des <span>solutions</span> sur mesure qui répondent à leurs
+                            besoins <span>spécifiques</span>.</p>
                     </div>
                 </div>
                 <img class="student" src="asset/img/student1.png" alt="">
                 <div class="wecontentlower">
-                    <p class="weyoung-box">Nous croyons en une culture d'équipe <span>collaborative</span>, où chaque membre apporte ses <span>idées</span> et ses <span>compétences</span> pour contribuer au <span>succès collectif</span>. Nous sommes dévoués à fournir un service client <span>exceptionnel</span>, en comprenant les besoins <span>uniques</span> de chaque client et en fournissant des solutions qui dépassent leurs <span>attentes</span>.</p>
+                    <p class="weyoung-box">Nous croyons en une culture d'équipe <span>collaborative</span>, où chaque
+                        membre apporte ses <span>idées</span> et ses <span>compétences</span> pour contribuer au
+                        <span>succès collectif</span>. Nous sommes dévoués à fournir un service client
+                        <span>exceptionnel</span>, en comprenant les besoins <span>uniques</span> de chaque client et en
+                        fournissant des solutions qui dépassent leurs <span>attentes</span>.</p>
                 </div>
             </section>
+        </section>
+        <section id="project">
+            <section class="title-project">
+                <div>
+                    <h1>Nos projets</h1>
+                </div>
+            </section>
+            <section class="project-content">
+                <div class="project-header-box">
+                    <p>En tant que jeunes étudiants, nous entamons notre parcours dans le monde de la création avec un <span>esprit ouvert</span> et une <span>énergie débordante</span>. Notre parcours est marqué par la fraîcheur de la <span>jeunesse</span>, ce qui peut expliquer notre nombre de projets encore limité. Cependant, ne vous méprenez pas : notre <span>jeunesse</span> est notre <span>atout</span>. Elle nous permet d'aborder chaque projet avec une perspective <span>innovante</span> et une <span>passion</span> inégalée. Nous sommes prêts à relever les défis avec <span>audace</span> et à nous investir <span>pleinement</span> dans chaque opportunité qui se présente à nous.</p>
+                </div>
+                <div class="project-object">
+                    <video class="video" src="asset\img\Vidéo sans titre ‐ Réalisée avec Clipchamp (3).mp4"></video>
+                    <button class="button-play">Play</button>
+                </div>
+            </section>
+            
         </section>
     </main>
     <footer>
@@ -79,14 +109,21 @@
             <img src="asset/img/Net’BJ..png" alt="">
             <p>Copyright © 2024 - Tous droits réservés</p>
         </div>
-        <div>
+        <div class="rightfooter-box">
+            <ul class="social">
+                <li><a href=""><img src="asset\img\icone-linkedin-ronde-noire.png" alt=""></a></li>
+                <li><a href=""><img src="asset\img\png-clipart-logo-computer-icons-youtube-insta-circle-label-logo-removebg-preview.png" alt=""></a></li>
+                <li><a href=""><img src="asset\img\Stickers-tiktok.jpg" alt=""></a></li>
+            </ul>
             <ul>
                 <li><a href="#we">Nous</a></li>
-                <li><a href="">Nos Projets</a></li>
+                <li><a href="#project">Nos Projets</a></li>
                 <li><button>Contact</button></li>
             </ul>
         </div>
-        
+
     </footer>
 </body>
+<script src="asset\script\script.js"></script>
+
 </html>
