--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="#we">Nous</a></li>
             <li><a href="#project">Nos Projets</a></li>
-            <li><button>Contact</button></li>
+            <li><button class="contact">Contact</button></li>
         </ul>
     </nav>
     <header>
@@ -46,62 +46,98 @@
 
     </header>
     <main>
-        <section id="we">
-            <section class="weheader">
-                <div class="wetitle-box">
-                    <img src="asset/img/net.png" alt="">
+        <section class="page">
+            <section id="we">
+                <section class="weheader">
+                    <div class="wetitle-box">
+                        <img src="asset/img/net.png" alt="">
+                        <div>
+                            <h2>Qui sommes <span> nous</span> ?</h2>
+                        </div>
+                        <img src="asset/img/net.png" alt="">
+                    </div>
+                </section>
+                <section class="wecontent">
+                    <img class="netwe" src="asset/img/netwe.png" alt="">
+                    <img class="storm" src="asset/img/Storm.png" alt="">
+                    <div class="wecontenthight">
+                        <div class="wemotivation-box">
+                            <p>Nous sommes ouverts à toute proposition et nous savons nous <span>adapter rapidement</span>
+                                aux besoins changeants de nos clients. Notre <span>jeunesse</span> est notre force, nous
+                                permettant de penser de manière <span>créative</span> et de trouver des solutions
+                                <span>novatrices</span> pour répondre aux défis complexes du monde numérique d'aujourd'hui.
+                            </p>
+                        </div>
+                        <div class="westudent-box">
+                            <p>En tant qu'<span>étudiants</span> en école d'ingénieur, nous sommes constamment en train
+                                d'<span>apprendre</span> et de nous former pour rester à la pointe des dernières
+                                <span>technologies</span> et des meilleures <span>pratiques</span>. Notre <span>flexibilité
+                                    et notre réactivité</span> nous permettent de nous adapter rapidement aux demandes de
+                                nos clients et de fournir des <span>solutions</span> sur mesure qui répondent à leurs
+                                besoins <span>spécifiques</span>.</p>
+                        </div>
+                    </div>
+                    <img class="student" src="asset/img/student1.png" alt="">
+                    <div class="wecontentlower">
+                        <p class="weyoung-box">Nous croyons en une culture d'équipe <span>collaborative</span>, où chaque
+                            membre apporte ses <span>idées</span> et ses <span>compétences</span> pour contribuer au
+                            <span>succès collectif</span>. Nous sommes dévoués à fournir un service client
+                            <span>exceptionnel</span>, en comprenant les besoins <span>uniques</span> de chaque client et en
+                            fournissant des solutions qui dépassent leurs <span>attentes</span>.</p>
+                    </div>
+                </section>
+            </section>
+            <section id="project">
+                <section class="title-project">
                     <div>
-                        <h2>Qui sommes <span> nous</span> ?</h2>
+                        <h1>Nos projets</h1>
                     </div>
-                    <img src="asset/img/net.png" alt="">
-                </div>
-            </section>
-            <section class="wecontent">
-                <img class="netwe" src="asset/img/netwe.png" alt="">
-                <img class="storm" src="asset/img/Storm.png" alt="">
-                <div class="wecontenthight">
-                    <div class="wemotivation-box">
-                        <p>Nous sommes ouverts à toute proposition et nous savons nous <span>adapter rapidement</span>
-                            aux besoins changeants de nos clients. Notre <span>jeunesse</span> est notre force, nous
-                            permettant de penser de manière <span>créative</span> et de trouver des solutions
-                            <span>novatrices</span> pour répondre aux défis complexes du monde numérique d'aujourd'hui.
-                        </p>
+                </section>
+                <section class="project-content">
+                    <div class="project-header-box">
+                        <p>En tant que jeunes étudiants, nous entamons notre parcours dans le monde de la création avec un <span>esprit ouvert</span> et une <span>énergie débordante</span>. Notre parcours est marqué par la fraîcheur de la <span>jeunesse</span>, ce qui peut expliquer notre nombre de projets encore limité. Cependant, ne vous méprenez pas : notre <span>jeunesse</span> est notre <span>atout</span>. Elle nous permet d'aborder chaque projet avec une perspective <span>innovante</span> et une <span>passion</span> inégalée. Nous sommes prêts à relever les défis avec <span>audace</span> et à nous investir <span>pleinement</span> dans chaque opportunité qui se présente à nous.</p>
                     </div>
-                    <div class="westudent-box">
-                        <p>En tant qu'<span>étudiants</span> en école d'ingénieur, nous sommes constamment en train
-                            d'<span>apprendre</span> et de nous former pour rester à la pointe des dernières
-                            <span>technologies</span> et des meilleures <span>pratiques</span>. Notre <span>flexibilité
-                                et notre réactivité</span> nous permettent de nous adapter rapidement aux demandes de
-                            nos clients et de fournir des <span>solutions</span> sur mesure qui répondent à leurs
-                            besoins <span>spécifiques</span>.</p>
+                    <div class="project-object">
+                        <video class="video" src="asset\img\Vidéo sans titre ‐ Réalisée avec Clipchamp (3).mp4"></video>
+                        <button class="button-play">Play</button>
                     </div>
-                </div>
-                <img class="student" src="asset/img/student1.png" alt="">
-                <div class="wecontentlower">
-                    <p class="weyoung-box">Nous croyons en une culture d'équipe <span>collaborative</span>, où chaque
-                        membre apporte ses <span>idées</span> et ses <span>compétences</span> pour contribuer au
-                        <span>succès collectif</span>. Nous sommes dévoués à fournir un service client
-                        <span>exceptionnel</span>, en comprenant les besoins <span>uniques</span> de chaque client et en
-                        fournissant des solutions qui dépassent leurs <span>attentes</span>.</p>
-                </div>
-            </section>
+                </section>
+            </section> 
         </section>
-        <section id="project">
-            <section class="title-project">
-                <div>
-                    <h1>Nos projets</h1>
+        <section class="popup-box">
+            <div class="popup-content">
+                <div class="popup-header">
+                    <h1>Contact</h1>
+                    <h2>Remplissez ce formulaire pour nous contacter :</h2>
                 </div>
-            </section>
-            <section class="project-content">
-                <div class="project-header-box">
-                    <p>En tant que jeunes étudiants, nous entamons notre parcours dans le monde de la création avec un <span>esprit ouvert</span> et une <span>énergie débordante</span>. Notre parcours est marqué par la fraîcheur de la <span>jeunesse</span>, ce qui peut expliquer notre nombre de projets encore limité. Cependant, ne vous méprenez pas : notre <span>jeunesse</span> est notre <span>atout</span>. Elle nous permet d'aborder chaque projet avec une perspective <span>innovante</span> et une <span>passion</span> inégalée. Nous sommes prêts à relever les défis avec <span>audace</span> et à nous investir <span>pleinement</span> dans chaque opportunité qui se présente à nous.</p>
+                <div class="popup-form">
+                    <form action="">
+                        <div class="name-box">
+                            <div>
+                                <label for="name">Nom</label>
+                                <input type="text" id="name" name="name" required>
+                            </div>
+                            <div>
+                                <label for="prenom">Prenom</label>
+                                <input type="text" id="prenom" name="prenom" required>
+                            </div>
+                        </div>
+                        
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div>
+                            <label for="message">Message</label>
+                            <textarea name="message" id="message" required></textarea>
+                        </div>
+                        <div class="buttonform">
+                            <button type="submit">Envoyer</button>
+                            <button class="exit">Annuler</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="project-object">
-                    <video class="video" src="asset\img\Vidéo sans titre ‐ Réalisée avec Clipchamp (3).mp4"></video>
-                    <button class="button-play">Play</button>
-                </div>
-            </section>
-            
+            </div>
         </section>
     </main>
     <footer>
@@ -118,7 +154,7 @@
             <ul>
                 <li><a href="#we">Nous</a></li>
                 <li><a href="#project">Nos Projets</a></li>
-                <li><button>Contact</button></li>
+                <li><button class="contact">Contact</button></li>
             </ul>
         </div>
 
