--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:title" content="Net'BJ">
     <meta property="og:description" content="Net'Bj votre agence web">
     <link rel="stylesheet" href="asset/style/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -21,6 +22,7 @@
             <li><a href="#project">Nos Projets</a></li>
             <li><button class="contact">Contact</button></li>
         </ul>
+        <img class="menuham" src="asset\img\menuham.png" alt="">
     </nav>
     <header>
         <div class="home-devis-box">
@@ -31,7 +33,7 @@
                 <p>Rentrez en contact avec nous</p>
             </div>
             <img class="confiance" src="asset\img\confiance.png" alt="">
-            <button>Cliquez ici</button>
+            <button class="contact  ">Cliquez ici</button>
         </div>
         <div class="summary-box">
             <h1>Votre <span>nouvelle</span> agence <span>web</span></h1>
