--- a/index.html
+++ b/index.html
@@ -64,28 +64,36 @@
                     <img class="storm" src="asset/img/Storm.png" alt="">
                     <div class="wecontenthight">
                         <div class="wemotivation-box">
-                            <p>Nous sommes ouverts à toute proposition et nous savons nous <span>adapter rapidement</span>
+                            <p>Nous sommes ouverts à toute proposition et nous savons nous <span>adapter
+                                    rapidement</span>
                                 aux besoins changeants de nos clients. Notre <span>jeunesse</span> est notre force, nous
                                 permettant de penser de manière <span>créative</span> et de trouver des solutions
-                                <span>novatrices</span> pour répondre aux défis complexes du monde numérique d'aujourd'hui.
+                                <span>novatrices</span> pour répondre aux défis complexes du monde numérique
+                                d'aujourd'hui.
                             </p>
                         </div>
                         <div class="westudent-box">
                             <p>En tant qu'<span>étudiants</span> en école d'ingénieur, nous sommes constamment en train
                                 d'<span>apprendre</span> et de nous former pour rester à la pointe des dernières
-                                <span>technologies</span> et des meilleures <span>pratiques</span>. Notre <span>flexibilité
-                                    et notre réactivité</span> nous permettent de nous adapter rapidement aux demandes de
+                                <span>technologies</span> et des meilleures <span>pratiques</span>. Notre
+                                <span>flexibilité
+                                    et notre réactivité</span> nous permettent de nous adapter rapidement aux demandes
+                                de
                                 nos clients et de fournir des <span>solutions</span> sur mesure qui répondent à leurs
-                                besoins <span>spécifiques</span>.</p>
+                                besoins <span>spécifiques</span>.
+                            </p>
                         </div>
                     </div>
                     <img class="student" src="asset/img/student1.png" alt="">
                     <div class="wecontentlower">
-                        <p class="weyoung-box">Nous croyons en une culture d'équipe <span>collaborative</span>, où chaque
+                        <p class="weyoung-box">Nous croyons en une culture d'équipe <span>collaborative</span>, où
+                            chaque
                             membre apporte ses <span>idées</span> et ses <span>compétences</span> pour contribuer au
                             <span>succès collectif</span>. Nous sommes dévoués à fournir un service client
-                            <span>exceptionnel</span>, en comprenant les besoins <span>uniques</span> de chaque client et en
-                            fournissant des solutions qui dépassent leurs <span>attentes</span>.</p>
+                            <span>exceptionnel</span>, en comprenant les besoins <span>uniques</span> de chaque client
+                            et en
+                            fournissant des solutions qui dépassent leurs <span>attentes</span>.
+                        </p>
                     </div>
                 </section>
             </section>
@@ -97,14 +105,21 @@
                 </section>
                 <section class="project-content">
                     <div class="project-header-box">
-                        <p>En tant que jeunes étudiants, nous entamons notre parcours dans le monde de la création avec un <span>esprit ouvert</span> et une <span>énergie débordante</span>. Notre parcours est marqué par la fraîcheur de la <span>jeunesse</span>, ce qui peut expliquer notre nombre de projets encore limité. Cependant, ne vous méprenez pas : notre <span>jeunesse</span> est notre <span>atout</span>. Elle nous permet d'aborder chaque projet avec une perspective <span>innovante</span> et une <span>passion</span> inégalée. Nous sommes prêts à relever les défis avec <span>audace</span> et à nous investir <span>pleinement</span> dans chaque opportunité qui se présente à nous.</p>
+                        <p>En tant que jeunes étudiants, nous entamons notre parcours dans le monde de la création avec
+                            un <span>esprit ouvert</span> et une <span>énergie débordante</span>. Notre parcours est
+                            marqué par la fraîcheur de la <span>jeunesse</span>, ce qui peut expliquer notre nombre de
+                            projets encore limité. Cependant, ne vous méprenez pas : notre <span>jeunesse</span> est
+                            notre <span>atout</span>. Elle nous permet d'aborder chaque projet avec une perspective
+                            <span>innovante</span> et une <span>passion</span> inégalée. Nous sommes prêts à relever les
+                            défis avec <span>audace</span> et à nous investir <span>pleinement</span> dans chaque
+                            opportunité qui se présente à nous.</p>
                     </div>
                     <div class="project-object">
                         <video class="video" src="asset\img\Vidéo sans titre ‐ Réalisée avec Clipchamp (3).mp4"></video>
                         <button class="button-play">Play</button>
                     </div>
                 </section>
-            </section> 
+            </section>
         </section>
         <section class="popup-box">
             <div class="popup-content">
@@ -124,7 +139,7 @@
                                 <input type="text" id="prenom" name="prenom" required>
                             </div>
                         </div>
-                        
+
                         <div>
                             <label for="email">Email</label>
                             <input type="email" id="email" name="email" required>
@@ -150,7 +165,9 @@
         <div class="rightfooter-box">
             <ul class="social">
                 <li><a href=""><img src="asset\img\icone-linkedin-ronde-noire.png" alt=""></a></li>
-                <li><a href=""><img src="asset\img\png-clipart-logo-computer-icons-youtube-insta-circle-label-logo-removebg-preview.png" alt=""></a></li>
+                <li><a href=""><img
+                            src="asset\img\png-clipart-logo-computer-icons-youtube-insta-circle-label-logo-removebg-preview.png"
+                            alt=""></a></li>
                 <li><a href=""><img src="asset\img\Stickers-tiktok.jpg" alt=""></a></li>
             </ul>
             <ul>
