--- a/index.html
+++ b/index.html
@@ -165,12 +165,10 @@
         <div class="rightfooter-box">
             <ul class="social">
                 <li><a href=""><img src="asset\img\icone-linkedin-ronde-noire.png" alt=""></a></li>
-                <li><a href=""><img
-                            src="asset\img\png-clipart-logo-computer-icons-youtube-insta-circle-label-logo-removebg-preview.png"
-                            alt=""></a></li>
+                <li><a href=""><img src="asset\img\png-clipart-logo-computer-icons-youtube-insta-circle-label-logo-removebg-preview.png" alt=""></a></li>
                 <li><a href=""><img src="asset\img\Stickers-tiktok.jpg" alt=""></a></li>
             </ul>
-            <ul>
+            <ul class="navfooter">
                 <li><a href="#we">Nous</a></li>
                 <li><a href="#project">Nos Projets</a></li>
                 <li><button class="contact">Contact</button></li>
