--- a/index.html
+++ b/index.html
@@ -25,27 +25,14 @@
         <img class="menuham" src="asset\img\menuham.png" alt="">
     </nav>
     <header>
-        <div class="home-devis-box">
-            <h1>Envie de sauter le pas ?</h1>
-            <img class="devis" src="asset\img\devis.png" alt="">
+        <div id="headerbox">
             <div>
-                <p>Faites votres devis</p>
-                <p>Rentrez en contact avec nous</p>
+
             </div>
-            <img class="confiance" src="asset\img\confiance.png" alt="">
-            <button class="contact  ">Cliquez ici</button>
+            <div id="telephone-box">
+                <div></div>
+            </div>
         </div>
-        <div class="summary-box">
-            <h1>Votre <span>nouvelle</span> agence <span>web</span></h1>
-            <p>Développez votre présence en ligne avec un site web professionnel conçu pour propulser votre entreprise
-                vers de nouveaux sommets. </p>
-            <p>Notre équipe dynamique et expérimentée vous accompagne dans la réalisation de vos projets digitaux. À
-                l'écoute, compréhensive, créative et réactive, nous vous proposons des solutions sur mesure, adaptées à
-                vos besoins spécifiques.</p>
-            <p>Contactez-nous dès maintenant pour bénéficier de nos services au plus vite !</p>
-        </div>
-
-
     </header>
     <main>
         <section class="page">
