--- a/index.html
+++ b/index.html
@@ -26,11 +26,19 @@
     </nav>
     <header>
         <div id="headerbox">
-            <div>
-
+            <div id="titleheader-box">
+                <h1>Votre nouvelle <span>agence web</span></h1>
+                <p>Développez votre présence en ligne avec un site web professionnel conçu pour propulser votre entreprise vers de nouveaux sommets.</p>
+                <p>Notre équipe dynamique et expérimentée vous accompagne dans la réalisation de vos projets digitaux. À l'écoute, compréhensive, créative et réactive, nous vous proposons des solutions sur mesure, adaptées à vos besoins spécifiques.</p>
+                <p>Contactez-nous dès maintenant pour bénéficier de nos services au plus vite !</p>
             </div>
             <div id="telephone-box">
-                <div></div>
+                <div>
+                    <h2>Envie de sauter le pas ?</h2>
+                    <img src="asset\img\devis.png" alt="">
+                    <p>Faites votre devis !</p>  
+                    <button class="contact">Cliquez ici</button>
+                </div>
             </div>
         </div>
     </header>
