--- a/index.html
+++ b/index.html
@@ -28,92 +28,59 @@
         <div id="headerbox">
             <div id="titleheader-box">
                 <h1>Votre nouvelle <span>agence web</span></h1>
-                <p>Développez votre présence en ligne avec un site web professionnel conçu pour propulser votre entreprise vers de nouveaux sommets.</p>
-                <p>Notre équipe dynamique et expérimentée vous accompagne dans la réalisation de vos projets digitaux. À l'écoute, compréhensive, créative et réactive, nous vous proposons des solutions sur mesure, adaptées à vos besoins spécifiques.</p>
+                <p>Développez votre présence en ligne avec un site web professionnel conçu pour propulser votre
+                    entreprise vers de nouveaux sommets.</p>
+                <p>Notre équipe dynamique et expérimentée vous accompagne dans la réalisation de vos projets digitaux. À
+                    l'écoute, compréhensive, créative et réactive, nous vous proposons des solutions sur mesure,
+                    adaptées à vos besoins spécifiques.</p>
                 <p>Contactez-nous dès maintenant pour bénéficier de nos services au plus vite !</p>
             </div>
             <div id="telephone-box">
                 <div>
                     <h2>Envie de sauter le pas ?</h2>
                     <img src="asset\img\devis.png" alt="">
-                    <p>Faites votre devis !</p>  
+                    <p>Faites votre devis !</p>
                     <button class="contact">Cliquez ici</button>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <section class="page">
-            <section id="we">
-                <section class="weheader">
-                    <div class="wetitle-box">
-                        <img src="asset/img/net.png" alt="">
-                        <div>
-                            <h2>Qui sommes <span> nous</span> ?</h2>
-                        </div>
-                        <img src="asset/img/net.png" alt="">
-                    </div>
-                </section>
-                <section class="wecontent">
-                    <img class="netwe" src="asset/img/netwe.png" alt="">
-                    <img class="storm" src="asset/img/Storm.png" alt="">
-                    <div class="wecontenthight">
-                        <div class="wemotivation-box">
-                            <p>Nous sommes ouverts à toute proposition et nous savons nous <span>adapter
-                                    rapidement</span>
-                                aux besoins changeants de nos clients. Notre <span>jeunesse</span> est notre force, nous
-                                permettant de penser de manière <span>créative</span> et de trouver des solutions
-                                <span>novatrices</span> pour répondre aux défis complexes du monde numérique
-                                d'aujourd'hui.
-                            </p>
-                        </div>
-                        <div class="westudent-box">
-                            <p>En tant qu'<span>étudiants</span> en école d'ingénieur, nous sommes constamment en train
-                                d'<span>apprendre</span> et de nous former pour rester à la pointe des dernières
-                                <span>technologies</span> et des meilleures <span>pratiques</span>. Notre
-                                <span>flexibilité
-                                    et notre réactivité</span> nous permettent de nous adapter rapidement aux demandes
-                                de
-                                nos clients et de fournir des <span>solutions</span> sur mesure qui répondent à leurs
-                                besoins <span>spécifiques</span>.
-                            </p>
-                        </div>
-                    </div>
-                    <img class="student" src="asset/img/student1.png" alt="">
-                    <div class="wecontentlower">
-                        <p class="weyoung-box">Nous croyons en une culture d'équipe <span>collaborative</span>, où
-                            chaque
-                            membre apporte ses <span>idées</span> et ses <span>compétences</span> pour contribuer au
-                            <span>succès collectif</span>. Nous sommes dévoués à fournir un service client
-                            <span>exceptionnel</span>, en comprenant les besoins <span>uniques</span> de chaque client
-                            et en
-                            fournissant des solutions qui dépassent leurs <span>attentes</span>.
-                        </p>
-                    </div>
-                </section>
+        <section id="we">
+            <div class="titlewe">
+                <h1>Qui sommes <span>nous</span> ?</h1>
+            </div>
+            <div class="wecontent">
+                <div>
+                    <img src="asset\img\esaip.webp" alt="">
+                    <p>En tant qu'étudiants en école d'ingénieur, nous sommes <span>constamment</span> en train d'<span>apprendre</span> et de nous former pour rester à la <span>pointe des dernières technologies</span> et des meilleures pratiques. Notre <span>flexibilité</span> et notre <span>réactivité</span> nous permettent de nous adapter <span>rapidement</span> aux demandes de nos clients et de fournir des <span></span>solutions sur mesure qui répondent à leurs besoins spécifiques.</p>
+                </div>
+                <div></div>
+                <div></div>
+            </div>
+        </section>
+        <section id="project">
+            <section class="title-project">
+                <div>
+                    <h1>Nos projets</h1>
+                </div>
             </section>
-            <section id="project">
-                <section class="title-project">
-                    <div>
-                        <h1>Nos projets</h1>
-                    </div>
-                </section>
-                <section class="project-content">
-                    <div class="project-header-box">
-                        <p>En tant que jeunes étudiants, nous entamons notre parcours dans le monde de la création avec
-                            un <span>esprit ouvert</span> et une <span>énergie débordante</span>. Notre parcours est
-                            marqué par la fraîcheur de la <span>jeunesse</span>, ce qui peut expliquer notre nombre de
-                            projets encore limité. Cependant, ne vous méprenez pas : notre <span>jeunesse</span> est
-                            notre <span>atout</span>. Elle nous permet d'aborder chaque projet avec une perspective
-                            <span>innovante</span> et une <span>passion</span> inégalée. Nous sommes prêts à relever les
-                            défis avec <span>audace</span> et à nous investir <span>pleinement</span> dans chaque
-                            opportunité qui se présente à nous.</p>
-                    </div>
-                    <div class="project-object">
-                        <video class="video" src="asset\img\Vidéo sans titre ‐ Réalisée avec Clipchamp (3).mp4"></video>
-                        <button class="button-play">Play</button>
-                    </div>
-                </section>
+            <section class="project-content">
+                <div class="project-header-box">
+                    <p>En tant que jeunes étudiants, nous entamons notre parcours dans le monde de la création avec
+                        un <span>esprit ouvert</span> et une <span>énergie débordante</span>. Notre parcours est
+                        marqué par la fraîcheur de la <span>jeunesse</span>, ce qui peut expliquer notre nombre de
+                        projets encore limité. Cependant, ne vous méprenez pas : notre <span>jeunesse</span> est
+                        notre <span>atout</span>. Elle nous permet d'aborder chaque projet avec une perspective
+                        <span>innovante</span> et une <span>passion</span> inégalée. Nous sommes prêts à relever les
+                        défis avec <span>audace</span> et à nous investir <span>pleinement</span> dans chaque
+                        opportunité qui se présente à nous.
+                    </p>
+                </div>
+                <div class="project-object">
+                    <video class="video" src="asset\img\Vidéo sans titre ‐ Réalisée avec Clipchamp (3).mp4"></video>
+                    <button class="button-play">Play</button>
+                </div>
             </section>
         </section>
         <section class="popup-box">
@@ -160,7 +127,9 @@
         <div class="rightfooter-box">
             <ul class="social">
                 <li><a href=""><img src="asset\img\icone-linkedin-ronde-noire.png" alt=""></a></li>
-                <li><a href=""><img src="asset\img\png-clipart-logo-computer-icons-youtube-insta-circle-label-logo-removebg-preview.png" alt=""></a></li>
+                <li><a href=""><img
+                            src="asset\img\png-clipart-logo-computer-icons-youtube-insta-circle-label-logo-removebg-preview.png"
+                            alt=""></a></li>
                 <li><a href=""><img src="asset\img\Stickers-tiktok.jpg" alt=""></a></li>
             </ul>
             <ul class="navfooter">
