--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
                     <img src="asset\img\esaip.webp" alt="">
                     <p>En tant qu'étudiants en école d'ingénieur, nous sommes <span>constamment</span> en train d'<span>apprendre</span> et de nous former pour rester à la <span>pointe des dernières technologies</span> et des meilleures pratiques. Notre <span>flexibilité</span> et notre <span>réactivité</span> nous permettent de nous adapter <span>rapidement</span> aux demandes de nos clients et de fournir des <span></span>solutions sur mesure qui répondent à leurs besoins spécifiques.</p>
                 </div>
-                <div></div>
-                <div></div>
+                <div class="wecontent-spacebox">
+                    <img src="asset\img\numériqque.jpeg" alt="">
+                    <p>Nous sommes ouverts à toute proposition et nous savons nous <span>adapter rapidement</span> aux besoins changeants de nos clients. Notre <span>jeunesse</span> est notre <span>force</span>, nous permettant de penser de manière <span>créative</span> et de trouver des <span>solutions novatrices</span> pour répondre aux défis complexes du monde numérique d'aujourd'hui.</p>
+                </div>
+                <div class="wecontent-spacebox">
+                    <img src="asset\img\collaboration.jpg" alt="">
+                    <p>Nous croyons en une culture d'<span>équipe collaborative</span>, où chaque membre apporte ses <span>idées</span> et ses <span>compétences</span> pour contribuer au succès collectif. Nous sommes dévoués à fournir un <span>service client exceptionnel</span>, en comprenant les besoins uniques de chaque client et en fournissant des solutions qui dépassent leurs <span>attentes</span>.</p>
+                </div>
             </div>
         </section>
         <section id="project">
