--- a/index.html
+++ b/index.html
@@ -66,28 +66,27 @@
             </div>
         </section>
         <section id="project">
-            <section class="title-project">
-                <div>
-                    <h1>Nos projets</h1>
-                </div>
-            </section>
-            <section class="project-content">
-                <div class="project-header-box">
-                    <p>En tant que jeunes étudiants, nous entamons notre parcours dans le monde de la création avec
-                        un <span>esprit ouvert</span> et une <span>énergie débordante</span>. Notre parcours est
-                        marqué par la fraîcheur de la <span>jeunesse</span>, ce qui peut expliquer notre nombre de
-                        projets encore limité. Cependant, ne vous méprenez pas : notre <span>jeunesse</span> est
-                        notre <span>atout</span>. Elle nous permet d'aborder chaque projet avec une perspective
-                        <span>innovante</span> et une <span>passion</span> inégalée. Nous sommes prêts à relever les
-                        défis avec <span>audace</span> et à nous investir <span>pleinement</span> dans chaque
-                        opportunité qui se présente à nous.
-                    </p>
-                </div>
-                <div class="project-object">
-                    <video class="video" src="asset\img\Vidéo sans titre ‐ Réalisée avec Clipchamp (3).mp4"></video>
+            <div class="titleproject">
+                <h1>Nos <span>projets</span></h1>
+            </div>
+            <div class="project-content">
+                <div class="video-box">
+                    <video class="video" src="asset\img\Vidéo sans titre ‐ Réalisée avec Clipchamp (3).mp4"></video> 
                     <button class="button-play">Play</button>
                 </div>
-            </section>
+                <div>
+                    <h1>Notre <span>volonté</span></h1>
+                    <p>En tant que jeunes étudiants, nous entamons notre parcours dans le monde de la création avec
+                    un <span>esprit ouvert</span> et une <span>énergie débordante</span>. Notre parcours est
+                    marqué par la fraîcheur de la <span>jeunesse</span>, ce qui peut expliquer notre nombre de
+                    projets encore limité. Cependant, ne vous méprenez pas : notre <span>jeunesse</span> est
+                    notre <span>atout</span>. Elle nous permet d'aborder chaque projet avec une perspective
+                    <span>innovante</span> et une <span>passion</span> inégalée. Nous sommes prêts à relever les
+                    défis avec <span>audace</span> et à nous investir <span>pleinement</span> dans chaque
+                    opportunité qui se présente à nous.</p>
+                </div> 
+                
+            </div>
         </section>
         <section class="popup-box">
             <div class="popup-content">
